--- a/index.html
+++ b/index.html
@@ -375,55 +375,18 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-6 text-center animate-box">
-            <div class="wedding-events">
-              <div class="ceremony-bg" style="background-image: url(images/wed-party.jpg);"></div>
-              <div class="desc">
-                <h3 class="judul">RESEPSI</h3>
-                <div class="row">
-                  <div class="col-md-2 col-md-push-5">
-									<div class="icon-tip">
-										<span class="icon"><i class="icon-heart-o"></i></span>
-									</div>
-								</div>
-                  <div class="col-md-12">
-                    <div class="date">
-                      <i class="icon-calendar"></i>
-                      <span>Minggu</span>
-                      <span>12 Jun. 2021</span>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="date">
-                      <i class="icon-clock2"></i>
-                      <span>09:30</span>
-                      <span>Selesai</span>
-                    </div>
-                  </div>
-                </div>
-                <h3 class="judul" style="color: rgba(0, 0, 0, 0.7)">
-                  Taman Hummus Bintaro
-                </h3>
-                <p>
-                  Alamat : Jl. Jend. Sudirman, Bintaro Sektor 9 No.78, Pondok
-                  Pucung, Pondok Aren, South Tangerang City
-                </p>
-                <p>
-                  <a
-                    href="https://www.google.com/maps/dir//Q398%2BV26+Mushola+Al+Ikhwanul+Muttaqin,+Dk+Karang+Kemiri,+Karangkemiri,+Plompong,+Sirampog,+Brebes+Regency,+Central+Java+52272/@-6.6683331,107.3644834,9z/data=!4m9!4m8!1m0!1m5!1m1!1s0x2e6f8e5cc17ddddd:0xd191002f415c75da!2m2!1d109.0650045!2d-7.2303436!3e0"
-                    target="_blank"
-                    class="btn btn-primary btn-sm"
-                    ><i class="bi bi-geo-alt"></i
-                  ></a>
-                </p>
-              </div>
-            </div> -->
-          </div>
         </div>
-        <div class="row">
+        <div class="row row-bottom-padded-md">
           <div class="col-md-12 col-md-4 text-center justify-content-center">
             <div id="map" class="bootstrap-map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.08848335832!2d109.06520834490502!3d-7.230748048448831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f8e5cc17ddddd%3A0xd191002f415c75da!2sMushola%20Al%20Ikhwanul%20Muttaqin%2C%20Dk%20Karang%20Kemiri!5e0!3m2!1sen!2sid!4v1638876849256!5m2!1sen!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.08848335832!2d109.06520834490502!3d-7.230748048448831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f8e5cc17ddddd%3A0xd191002f415c75da!2sMushola%20Al%20Ikhwanul%20Muttaqin%2C%20Dk%20Karang%20Kemiri!5e0!3m2!1sen!2sid!4v1638876849256!5m2!1sen!2sid"
+                width="400"
+                height="300"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+              ></iframe>
             </div>
           </div>
         </div>
@@ -431,7 +394,7 @@
     </div>
 
     <!-- covid protokol -->
-    <div id="covid" data-section="when-where">
+    <div id="bootstrap-when-where" data-section="when-where">
       <div class="container-fluid covid-box">
         <div class="container">
           <div class="row animate-box">
@@ -515,9 +478,10 @@
     <!-- AUDIO -->
 
     <audio id="audio" loop>
-      <source src="music/pamungkastothebone.mp3" type="audio/mpeg" />
+      <source src="music/pernikahanimpian.mp3" type="audio/mpeg" />
     </audio>
-    <a id="playPauseBTN" onclick="playPause()" class="floating-btn"><i class="fa fa-pause"></i
+    <a id="playPauseBTN" onclick="playPause()" class="floating-btn"
+      ><i class="fa fa-pause"></i
     ></a>
     <!-- &nbsp;
 	&nbsp; -->
