final before revisi
final before revisi

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
 				<nav class="navbar navbar-default ">
 					<div class="button-menu">
       <div class="button-menu-item">
-        <a href="#home" class="nav__link active"
+        <a href="#1" class="nav__link active"
           ><i class="fa fa-home"></i><span></span
         ></a>
         <a href="#fh5co-couple" class="nav__link"
           ><i class="fa fa-user-friends"></i><span></span
         ></a>
-        <a href="#" class="nav__link"
-          ><i class="fa fa-envelope"></i><span></span
-        ></a>
         <a href="#bootstrap-when-where" class="nav__link"
+          ><i class="fa fa-calendar"></i><span></span
+        ></a>
+        <a href="#maps" class="nav__link"
           ><i class="fa fa-map-marker"></i> <span></span
         ></a>
       </div>
@@ -109,16 +109,16 @@
 		</div>
 	</header>
 
-	<div class="bootstrap-hero" data-section="home">
+	<div class="bootstrap-hero" id="1" data-section="home">
 		<div class="bootstrap-overlay"></div>
 		<div class="bootstrap-cover text-center" data-stellar-background-ratio="0.4"
-			style="background-image: url(images/bg4.jpeg); background-position: 0px opx;">
+			style="background-image: url(images/bg9-min.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
 			<div class="display-t">
 				<div class="display-tc">
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
 							<div class="animate-box svg-sm colored">
-								<img src="images/flaticon/bgdpn2.png" class="svg" alt="">
+								<!-- <img src="images/flaticon/svg/003-luxury.svg" class="svg" alt=""> -->
 								<h1 class="holder"><span>The Wedding of</span></h1>
                   <h2>Ari &amp; Shifa</h2>
                   <p>26.12.2021</p>
@@ -213,7 +213,7 @@
 
 	<!-- Awal Coundown -->
 	<div id="bootstrap-countdown" data-stellar-background-ratio="0.6"
-		style="background-image: url(images/bg8.jpeg); align-items: center; background-position: 0px 0px;"
+		style="background-image: url(images/bg2.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;"
 		data-section="wedding-day">
 		<div class="overlay"></div>
 		<div class="display-over">
@@ -288,37 +288,33 @@
 										<span>08:00 - Selesai</span>
 									</div>
 								</div>
+							</div>
+							<div class="row">
 								<h4>RESEPSI</h4>
 								<div class="col-md-6">
 									<div class="date">
 										<i class="icon-calendar"></i>
-										<span>Sabtu</span>
-										<span>28 Agustus 2021</span>
+										<span>Minggu</span>
+										<span>26 Desember 2021</span>
 									</div>
 								</div>
-								<!-- <div class="col-md-6">
+								<div class="col-md-6">
 									<div class="date">
 										<i class="icon-clock2"></i>
-										<span>14:00 WIB</span>
-										<span>16:00 WIB</span>
+										<span>09:30 WIB - Selesai</span>
 									</div>
-								</div> -->
+								</div>
 							</div>
-							<h3 class="judul" style="color: rgba(0, 0, 0, 0.7)">
-                  Kediaman Mempelai Wanita
-                </h3>
-                <p>
-                  Alamat : Dk Karang Kemiri RT/RW: 001/003, Desa Plompong, Kec.
-                  Sirompong, Kab. Brebes, Jawa Tengah
-                </p>
-                <p>
-                  <a
-                    href="https://www.google.com/maps/dir//Q398%2BV26+Mushola+Al+Ikhwanul+Muttaqin,+Dk+Karang+Kemiri,+Karangkemiri,+Plompong,+Sirampog,+Brebes+Regency,+Central+Java+52272/@-6.6683331,107.3644834,9z/data=!4m9!4m8!1m0!1m5!1m1!1s0x2e6f8e5cc17ddddd:0xd191002f415c75da!2m2!1d109.0650045!2d-7.2303436!3e0"
-                    target="_blank"
-                    class="btn btn-primary btn-sm"
-                    ><i class="fa fa-map-marker"><span>Lokasi</span></i></a
-                  >
-                </p>
+							<div class="row" id="maps">
+								<h3 class="judul" style="color: rgba(0, 0, 0, 0.7)">Kediaman Mempelai Wanita</h3>
+								<p>Alamat : Dk Karang Kemiri RT/RW: 001/003, Desa Plompong, Kec. Sirompong, Kab. Brebes, Jawa Tengah</p>
+								<p><a href="https://www.google.com/maps/dir//Q398%2BV26+Mushola+Al+Ikhwanul+Muttaqin,+Dk+Karang+Kemiri,+Karangkemiri,+Plompong,+Sirampog,+Brebes+Regency,+Central+Java+52272/@-6.6683331,107.3644834,9z/data=!4m9!4m8!1m0!1m5!1m1!1s0x2e6f8e5cc17ddddd:0xd191002f415c75da!2m2!1d109.0650045!2d-7.2303436!3e0" target="_blank" class="btn btn-primary btn-sm"><i class="fa fa-map-marker"><span>Lihat Lokasi</span></i></a></p>
+							</div>
+							<div class="row" style="margin-top: 20px;">
+								<div class="col-md-12 google-maps">
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.0920748209437!2d109.06281581487526!3d-7.230338273012996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f8e5cc17ddddd%3A0xd191002f415c75da!2sMushola%20Al%20Ikhwanul%20Muttaqin%2C%20Dk%20Karang%20Kemiri!5e0!3m2!1sen!2sid!4v1638900133628!5m2!1sen!2sid" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -333,7 +329,7 @@
 	</div>
 
 	<!-- covid protokol -->
-	<div id="bootstrap-when-where" data-section="when-where">
+	<div id="bootstrap-when-where1" data-section="when-where">
 		<div class="container-fluid covid-box">
 			<div class="container">
 				<div class="row">
@@ -494,7 +490,7 @@
 	&nbsp; -->
 	<!-- <a class="floating-btn" onclick="stop()">&#9611;</a> -->
 
-	<section id="pembuka" style="background-image: url(images/bg5.jpeg); background-size: cover; ">
+	<section id="pembuka" style= "background-image: url(images/pembuka1.png); background-size: cover; background-repeat: no-repeat; background-position: center;">
 
 		<div class="container">
 			<div class="box">
