--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 							<img src="images/groom1.jpg" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-groom">
-							<h3 style="font-family: 'Taviraj', sans-serif">Ahmad Fahrurroji S.T</h3>
+							<h3 style="font-family: 'Taviraj', sans-serif">Ahmad Fahrurrozi S.T</h3>
 							<p>Putra dari Keluarga Bapak Rohani &amp; Ibu Nuraisyah</p>
 						</div>
 					</div>
